Fixed flickering transition by preload images

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
 
 /* Transition animation */
 @keyframes bgSlide {
-    1% { background-image: url("./img/psychedelic_art.jpg"); }
+    0% { background-image: url("./img/psychedelic_art.jpg"); }
     25% { background-image: url("./img/apartment.jpg"); }
     50% { background-image: url("./img/room.jpg"); }
     75% { background-image: url("./img/cozy1.jpg"); }
@@ -141,6 +141,10 @@ caption {
     border-top: 2px solid rgba(0, 0, 0, 0.083);
 }
 
+#later-half p {
+    margin-left: -15px;
+}
+
 input {
     border: 1px solid rgba(0, 0, 0, 0.197);
     height: 25px;
@@ -210,7 +214,7 @@ footer > div {
 
 @media screen and (max-width: 800px) {
     #title {
-        width: 20vw;
+        width: 20vw;;
         display: inline-block;
         word-wrap: break-word;
     }
